<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_menu_convert"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_menu_convert">
    </item>
    <item
        android:id="@+id/action_menu_distance"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_menu_distance">
    </item>

    <group
        android:id="@+id/action_menu_group_locations"
        android:enabled="true"
        android:visible="true" >
        <item
            android:id="@+id/action_menu_list_locations"
            android:showAsAction="ifRoom|withText"
            android:title="@string/list_locations">
        </item>
        <item
            android:id="@+id/action_menu_add_location"
            android:showAsAction="ifRoom|withText"
            android:title="@string/add_location">
        </item>
    </group>

</menu>